<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_auto_request"
        android:icon="@drawable/ic_check_circle_black_24dp"
        android:title="@string/request_closest"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel_black_24dp"
        android:title="@string/cancel"
        app:showAsAction="ifRoom" />
</menu>