<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.segfault.homelessshelter.RegistrationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/registrationToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <EditText
        android:id="@+id/registrationNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/registrationEmailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationToolbar"
        android:layout_marginStart="85dp" />

    <EditText
        android:id="@+id/registrationEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="85dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/registrationPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="85dp" />

    <EditText
        android:id="@+id/registrationPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="84dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registrationConfirmPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="84dp" />

    <EditText
        android:id="@+id/registrationConfirmPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="85dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registrationAdminKeyEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="85dp" />

    <CheckBox
        android:id="@+id/registrationAdminCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/admin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationConfirmPasswordEditText"
        android:layout_marginStart="44dp" />

    <EditText
        android:id="@+id/registrationAdminKeyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginRight="37dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="@string/admin_key"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registrationOKButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registrationAdminCheckBox"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/registrationOKButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="148dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="148dp" />

</android.support.constraint.ConstraintLayout>
