<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.segfault.homelessshelter.ShelterDetailActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/shelterDetailLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shelterDetailUniqueKeyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shelterDetailNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shelterDetailCapacityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shelterDetailRestrictionsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shelterDetailLongitudeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shelterDetailLatitudeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shelterDetailAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shelterDetailSpecialNotesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shelterDetailPhoneNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/shelterDetailVacancyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minusReserveButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/reserveTextView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/plusReserveButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </LinearLayout>

            <Button
                android:id="@+id/reserveButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/reserve"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="503dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
